<resources>
    <string name="app_name">SE306Project1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="featured_products">Featured Products</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="civil_engineers">Civil Engineers</string>
    <string name="software_engineers">Software Engineers</string>
    <string name="chemmat_engineers">Chemmat Engineers</string>
    <string name="mechanical_engineers">Mechanical Engineers</string>
    <string name="civil">Civil</string>
    <string name="software">Software</string>
    <string name="chemmat">Chemmat</string>
    <string name="mechanical">Mechanical</string>
    <string name="hard_helmet_description">No Civil Engineer can be caught without their hard helmet. Designed to protect your precious head against the variety of head injuries that can be sustained at work, it’s a must have for any prospective Civil Engineer.</string>
    <string name="size">SIZE</string>
    <string name="home">Home</string>
    <string name="watchlist">Watchlist</string>
    <string name="cart">Cart</string>
    <string name="clear_watchlist">Clear Watchlist</string>
    <string name="no_items_in_watchlist">No Items in watchlist</string>
    <string name="clear_cart">Clear cart</string>
    <string name="_4_items_in_cart">2 Items in cart</string>
    <string name="checkout">Checkout</string>
    <string name="item_image">Item Image</string>
    <string name="total">Total</string>
    <string name="background_image">background_image</string>
    <string name="welcome_to_engiwear">Welcome to EngiWear!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="or_continue_as_guest">Or continue as guest</string>
    <string name="sign_up">Sign up.</string>
    <string name="top_bar_search_hint">Search for items here...</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_sign_up">Sign up</string>
    <string name="sign_in">Sign in.</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="ready_to_find_your_look">Ready to find your look?</string>
    <string name="at_engiwear_we_supply_you_with_the_engineering_look_no_matter_your_specialisation">At EngiWear, we supply you with the engineering look, no matter your specialisation.</string>
    <string name="we_supply_the_goods">We supply the goods.</string>
    <string name="a_wide_range_of_selections_each_with_their_unique_taste_to_fit_your_style">A wide range of selections, each with their unique taste to fit your style.</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="sign_up_with_an_account_and_get_started">Sign up with an account, and get started.</string>
    <string name="civil_subcategory_ppe">PPE</string>
    <string name="civil_subcategory_clothing">Clothing</string>
    <string name="civil_subcategory_vehicles">Vehicles</string>
    <string name="civil_subcategory_tools">Tools</string>
    <string name="software_subcategory_linux_chad">Linux Chad</string>
    <string name="software_subcategory_apple_fanboy">Apple Fanboy</string>
    <string name="software_subcategory_default_skin">Default Skin</string>
    <string name="top_bar_background_image">top bar background image</string>
    <string name="category_image">category image</string>
    <string name="add_to_cart">+ Add to cart %.2f NZD</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="clear_user_data">Clear User Data</string>
</resources>