<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/favourite_solid_24dp"
        android:enabled="true"
        android:title="@string/watchlist" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:enabled="true"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:enabled="true"
        android:title="@string/profile" />
</menu>