<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShoppingCartActivity">

    <RelativeLayout
        android:id="@+id/top_bar_background_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/fui_transparent"
            android:backgroundTint="@color/fui_transparent"
            android:contentDescription="@string/top_bar_background_image"
            android:scaleType="fitXY"
            android:src="@drawable/red_wave_top_bar_background" />

        <TextView
            style="@style/DisplayMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="20dp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textFontWeight="700" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/top_bar_background_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/baseline_person_24"
        android:contentDescription="@string/profile_image"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/user_name_text_view"
        style="@style/TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_data_button"
        style="@style/ButtonIconCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_text_view"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/red_top_bar"
        android:fontFamily="@font/pptelegraf_medium"
        android:shadowColor="@color/fui_transparent"
        android:text="@string/clear_user_data"
        android:textColor="@color/white"
        android:textFontWeight="900"
        app:cornerRadius="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        style="@style/ButtonIconCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clear_data_button"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red_top_bar"
        android:fontFamily="@font/pptelegraf_medium"
        android:shadowColor="@color/fui_transparent"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textFontWeight="900"
        app:cornerRadius="10dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/cart_fragment_container"
        android:name="nz.ac.aucklanduni.se306project1.fragments.BottomNavigationFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>